--- a/styles/products.css
+++ b/styles/products.css
@@ -11,31 +11,64 @@ body {
   min-height: 100vh;
   /* overflow: hidden; */
   background-color: #33393d;
+  margin-top: 40px;
 }
 
 #cart {
   content: "";
-  position: absolute;
-  height: 2000px;
-  width: 2000px;
-  top: -50%;
-  left: -150%;
-  transform: translateY(-50%);
+  position: fixed;
+  height: 100vh;
+  width: 500px;
+  top: 0%;
+  left: -100%;
+  /* transform: translateY(-50%); */
   background-image: linear-gradient(-45deg, #2aabe4 0%, #04befe 100%);
   transition: 1.8s ease-in-out;
-  border-radius: 50%;
   z-index: 6;
   color: #fff;
 }
 
 #cart.active {
-  top: 5%;
-  left: -1500px;
+  left: 0px;
+}
+
+#profile {
+  content: "";
+  position: fixed;
+  height: 100vh;
+  width: 500px;
+  top: 0%;
+  left: -100%;
+  /* transform: translateY(-50%); */
+  background-image: linear-gradient(-45deg, #2aabe4 0%, #04befe 100%);
+  transition: 1.8s ease-in-out;
+  z-index: 6;
+  color: #fff;
+}
+
+#profile.active {
+  left: 0px;
 }
 
 .cards {
   position: fixed;
   z-index: 999;
+  background-color: #ffcd24;
+  border: none;
+  padding: 20px;
+  color: #fff;
+  border-radius: 50%;
+}
+
+.profile {
+  position: fixed;
+  z-index: 999;
+  left: 60px;
+  background-color: #ffcd24;
+  border: none;
+  padding: 20px;
+  color: #fff;
+  border-radius: 50%;
 }
 
 .button-container button {
@@ -190,4 +223,77 @@ body {
   width: 95%;
   margin: auto;
   justify-content: flex-start;
+}
+
+.prof_link {
+  display: flex;
+  flex-direction: column;
+  margin-top: 150px;
+  margin-left: 50px;
+}
+
+#cart {
+  padding: 50px;
+  padding-top: 140px;
+}
+
+.title {
+  margin-bottom: 20px;
+}
+
+li {
+  list-style: none;
+}
+
+.list-group-item {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  border-bottom: 1px solid #33393d;
+}
+
+.itm {
+  margin: 10px;
+  padding: 10px;
+}
+
+.price {
+  margin: 10px;
+  padding: 10px;
+}
+
+.dlt {
+  margin: 10px;
+  padding: 10px;
+}
+.dlt button {
+  height: 25px;
+  width: 25px;
+  border: none;
+  background: #ffcd24;
+}
+
+.calc {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.check {
+  margin-top: 30px;
+}
+
+.checkout {
+  height: 50px;
+  width: 200px;
+  background: #ffcd24;
+}
+
+.prof_link a {
+  margin-top: 10px;
+  padding: 10px;
+  text-decoration: none;
+  color: #33393d;
+  font-weight: bold;
+  text-transform: capitalize;
 }
